--- a/externals/coda-oss/modules/c++/coda-oss.vcxproj.filters
+++ b/externals/coda-oss/modules/c++/coda-oss.vcxproj.filters
@@ -36,9 +36,6 @@
     <ClInclude Include="coda_oss\include\coda_oss\optional.h">
       <Filter>coda_oss</Filter>
     </ClInclude>
-    <ClInclude Include="coda_oss\include\coda_oss\optional_.h">
-      <Filter>coda_oss</Filter>
-    </ClInclude>
     <ClInclude Include="coda_oss\include\coda_oss\span.h">
       <Filter>coda_oss</Filter>
     </ClInclude>
@@ -957,6 +954,12 @@
     <ClInclude Include="coda_oss\include\coda_oss\mdspan_.h">
       <Filter>coda_oss</Filter>
     </ClInclude>
+    <ClInclude Include="coda_oss\include\coda_oss\optional_.h">
+      <Filter>coda_oss</Filter>
+    </ClInclude>
+    <ClInclude Include="tiff\include\tiff\TiffUtils.h">
+      <Filter>tiff</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -1403,6 +1406,9 @@
     </ClCompile>
     <ClCompile Include="unique\source\UUID.cpp">
       <Filter>unique</Filter>
+    </ClCompile>
+    <ClCompile Include="tiff\source\TiffUtils.cpp">
+      <Filter>tiff</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
